seems like jcenter doesn't sync renamed artifact ids

--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ artifacts {
 publishing {
   publications {
     dockerCompose(MavenPublication) {
-      artifactId 'docker-compose-v3'
+      artifactId 'docker-compose'
       version artifactVersion
       from components.java
       artifact sourcesJar
