--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import java.text.SimpleDateFormat
 
 buildscript {
     ext {
-        kotlin_version = '1.1.2'
+        kotlin_version = '1.1.3'
     }
 
     repositories {
@@ -51,7 +51,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
-    compile 'io.github.microutils:kotlin-logging:1.4.4'
+    compile 'io.github.microutils:kotlin-logging:1.4.5'
     compile 'org.slf4j:slf4j-api:1.7.25'
     testCompile 'ch.qos.logback:logback-classic:1.2.3'
 
@@ -64,10 +64,12 @@ dependencies {
 //    compile 'com.github.fge:json-schema-validator:2.2.6'
 
     testCompile "org.jetbrains.kotlin:kotlin-test"
-    testCompile("org.jetbrains.spek:spek-api:$kotlin_version") {
+    testCompile("org.jetbrains.spek:spek-api:1.1.2") {
+//    testCompile("org.jetbrains.spek:spek-api:$kotlin_version") {
         exclude group: 'org.jetbrains.kotlin'
     }
-    testRuntime("org.jetbrains.spek:spek-junit-platform-engine:$kotlin_version") {
+    testRuntime("org.jetbrains.spek:spek-junit-platform-engine:1.1.2") {
+//    testRuntime("org.jetbrains.spek:spek-junit-platform-engine:$kotlin_version") {
         exclude group: 'org.junit.platform'
         exclude group: 'org.jetbrains.kotlin'
     }
