Update dependencies, enable GitHub Package Registry publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ org.gradle.daemon=true
 
 bintray.user=USERNAME
 bintray.key=API_KEY
+
+github.package-registry.owner=docker-client
+github.package-registry.repository=docker-compose-v3
+github.package-registry.username=
+github.package-registry.password=
