--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches-ignore:
       - main
-      - master
 jobs:
   ci-build:
     strategy:
@@ -13,15 +12,22 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
         java: [ 8, 11, 14 ]
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2.1.0
         with:
+          distribution: 'zulu'
           java-version: ${{ matrix.java }}
       - name: clean build
         run: ./gradlew clean build --no-daemon --info --stacktrace
-        timeout-minutes: 10
+      - name: Publish Test Report
+        if: ${{ always() }}
+        uses: scacap/action-surefire-report@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          report_paths: '**/build/test-results/test/TEST-*.xml'
 ...
