--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,7 @@ updates:
           - "org.junit.platform:*"
       kotlin:
         patterns:
+          - "jvm"
           - "org.jetbrains.kotlin:*"
       moshi:
         patterns:
